--- a/api-rest/package.json
+++ b/api-rest/package.json
@@ -2,10 +2,15 @@
   "name": "api-rest",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": ">=18"
+  },
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "knex": "node --no-warnings --import tsx ./node_modules/.bin/knex",
-    "lint": "eslint src --fix"
+    "knex": "node --no-warnings --loader tsx ./node_modules/.bin/knex",
+    "lint": "eslint src --ext .ts --fix",
+    "build": "tsup src --out-dir build",
+    "test": "vitest"
   },
   "keywords": [],
   "author": "",
@@ -16,18 +21,22 @@
     "@eslint/js": "^9.13.0",
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/node": "^22.7.8",
+    "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^8.11.0",
     "eslint": "^9.13.0",
+    "supertest": "^7.0.0",
     "tsc": "^2.0.4",
     "tsx": "^4.19.1",
     "typecript": "^0.0.1-security",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "vitest": "^2.1.3"
   },
   "dependencies": {
     "@fastify/cookie": "^11.0.1",
     "dotenv": "^16.4.5",
     "fastify": "^5.0.0",
     "knex": "^3.1.0",
+    "pg": "^8.13.1",
     "sqlite3": "^5.1.7",
     "zod": "^3.23.8"
   }
