--- a/api-solid/package.json
+++ b/api-solid/package.json
@@ -21,13 +21,21 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/bcryptjs": "2.4.6",
     "@types/node": "22.8.1",
+    "@vitest/ui": "2.1.4",
+    "prisma": "5.21.1",
     "tsup": "8.3.5",
     "tsx": "4.19.1",
-    "typescript": "5.6.3"
+    "typescript": "5.6.3",
+    "vite-tsconfig-paths": "5.0.1",
+    "vitest": "2.1.4"
   },
   "dependencies": {
+    "@prisma/client": "5.21.1",
+    "dayjs": "1.11.13",
     "dotenv": "16.4.5",
-    "fastify": "5.0.0"
+    "fastify": "5.0.0",
+    "zod": "3.23.8"
   }
 }
