--- a/api-solid/package.json
+++ b/api-solid/package.json
@@ -1,5 +1,6 @@
 {
   "name": "api-solid",
+  "type": "module",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -23,7 +24,9 @@
   "devDependencies": {
     "@types/bcryptjs": "2.4.6",
     "@types/node": "22.8.1",
+    "@types/supertest": "6.0.2",
     "@vitest/ui": "2.1.4",
+    "npm-run-all": "4.1.5",
     "prisma": "5.21.1",
     "tsup": "8.3.5",
     "tsx": "4.19.1",
@@ -32,10 +35,14 @@
     "vitest": "2.1.4"
   },
   "dependencies": {
+    "@fastify/cookie": "11.0.1",
+    "@fastify/jwt": "9.0.1",
     "@prisma/client": "5.21.1",
+    "bcryptjs": "2.4.3",
     "dayjs": "1.11.13",
     "dotenv": "16.4.5",
     "fastify": "5.0.0",
+    "supertest": "7.0.0",
     "zod": "3.23.8"
   }
 }
